<resources>
    <string name="app_name">Happy Birthday!</string>
    <string name="happy_birthday_wish_text">"Happy Birthday to a sister who has the worlds greatest brother!"</string>
    <string name="identification_text_sister">This is YOU >>></string>
    <string name="happy_birthday_wish_text2">"Dang, you're so lucky!"</string>
    <string name="identification_text_me"> and this is ME. </string>
    <string name="reset_curtains"> this close the curtains </string>

</resources>