<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/first_half_background"
        android:layout_width="410dp"
        android:layout_height="347dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/happy_birthday_background_blank" />

    <ImageView
        android:id="@+id/second_half_background"
        android:layout_width="410dp"
        android:layout_height="347dp"
        android:importantForAccessibility="no"
        android:rotation="-180"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/happy_birthday_background_blank" />

    <ImageView
        android:id="@+id/sister_image"
        android:layout_width="241dp"
        android:layout_height="142dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/first_half_background"
        app:layout_constraintEnd_toEndOf="@id/first_half_background"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="@id/first_half_background"
        app:layout_constraintTop_toTopOf="@id/first_half_background"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/theatre_curtains" />

    <ImageView
        android:id="@+id/my_image"
        android:layout_width="229dp"
        android:layout_height="146dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/second_half_background"
        app:layout_constraintEnd_toEndOf="@id/second_half_background"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="@id/second_half_background"
        app:layout_constraintTop_toTopOf="@id/second_half_background"
        app:layout_constraintVertical_bias="0.559"
        app:srcCompat="@drawable/theatre_curtains"/>

    <TextView
        android:id="@+id/sister_textview"
        android:layout_width="334dp"
        android:layout_height="137dp"
        android:fontFamily="cursive"
        android:shadowColor="#CD1D1D"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="50"
        android:text="@string/happy_birthday_wish_text"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/holo_purple"
        android:textSize="34sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/sister_image"
        app:layout_constraintEnd_toEndOf="@id/first_half_background"
        app:layout_constraintStart_toStartOf="@id/first_half_background"
        app:layout_constraintTop_toTopOf="@id/first_half_background" />

    <Button
        android:id="@+id/you_button"
        android:layout_width="145dp"
        android:layout_height="77dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="55dp"
        android:fontFamily="cursive"
        android:text="@string/identification_text_sister"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:backgroundTint="#B2FF59"
        app:layout_constraintBottom_toBottomOf="@id/first_half_background"
        app:layout_constraintEnd_toStartOf="@id/sister_image"
        app:layout_constraintStart_toStartOf="@id/first_half_background"
        app:layout_constraintTop_toTopOf="@id/first_half_background" />

    <TextView
        android:id="@+id/my_textview"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:fontFamily="cursive"
        android:shadowColor="#CD1D1D"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="50"
        android:text="@string/happy_birthday_wish_text2"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/holo_purple"
        android:textSize="34sp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toTopOf="@id/my_image"
        app:layout_constraintEnd_toEndOf="@id/second_half_background"
        app:layout_constraintStart_toStartOf="@id/second_half_background"
        app:layout_constraintTop_toTopOf="@id/second_half_background"/>

    <Button
        android:id="@+id/me_button"
        android:layout_width="150dp"
        android:layout_height="77dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="cursive"
        android:text="@string/identification_text_me"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:backgroundTint="#FF6E40"
        app:layout_constraintBottom_toBottomOf="@id/second_half_background"
        app:layout_constraintEnd_toEndOf="@id/second_half_background"
        app:layout_constraintStart_toEndOf="@id/my_image"
        app:layout_constraintTop_toTopOf="@id/second_half_background" />


    <ImageButton
        android:id="@+id/reset_curtain_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginBottom="20dp"
        android:background="#433F3F"
        android:contentDescription="@string/reset_curtains"
        android:tint="#FF6E40"
        app:layout_constraintBottom_toBottomOf="@id/second_half_background"
        app:layout_constraintEnd_toEndOf="@id/second_half_background"
        app:layout_constraintStart_toStartOf="@id/second_half_background"
        app:layout_constraintTop_toBottomOf="@id/me_button"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>